# lico

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.md.backup  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
lico/: __init__.py  core.py  example_classes.py  exceptions.py  io.py  lico.py  logging.py  operations.py  types.py
tests/: __init__.py  conftest.py  example_classes.py  factories.py  test_core.py  test_examples.py  test_lico.py
tests/resources/: a_csv_table_file
